src/objects/CE_InternalProjectSkill__c.object
<CustomObject>
    <fields>
        <fullName>Internal_Project_Skill__c</fullName>
        <externalId>true</externalId>
        <label>Internal Project Skill</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CE_Internal_Project__c</fullName>
        <label>Internal Project</label>
        <referenceTo>CE_Internal_Project__c</referenceTo>
        <relationshipLabel>Internal Project Skills</relationshipLabel>
        <relationshipName>Internal_Project_Skills</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Skill__c</fullName>
        <label>Skill</label>
        <referenceTo>CE_Skills__c</referenceTo>
        <relationshipLabel>Internal Project Skills</relationshipLabel>
        <relationshipName>Internal_Project_Skills</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Internal Project Skill</label>
    <nameField>
        <displayFormat>IPS-{000000000}</displayFormat>
        <label>InternalProjectSkill Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internal Project Skills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>